chore(deps): Update dependency org.gaul:modernizer-maven-plugin to v3.4.0
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>